:rocket: Adicionado Matriz de Confusão mostrado em um heatmap para analisar o desempenho do modelo

--- a/7dayscode.ipynb
+++ b/7dayscode.ipynb
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 493,
+      "execution_count": null,
       "metadata": {
         "id": "BG-opRb4Qcw5"
       },
@@ -82,7 +82,8 @@
         "from sklearn.ensemble import RandomForestClassifier\n",
         "#avaliacao do modelo\n",
         "from sklearn import metrics\n",
-        "from yellowbrick.model_selection import FeatureImportances"
+        "from yellowbrick.model_selection import FeatureImportances\n",
+        "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay"
       ]
     },
     {
@@ -7076,6 +7077,34 @@
         "y_pred = model_rfc.predict(X_test)\n",
         "resultados = avaliar_modelo(y_test, y_pred, 'Random Florest', resultados)\n",
         "resultados"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Matriz de Confusão**\n",
+        "\n",
+        "\n",
+        "> A matriz de confusão nos da uma ideia de como o modelo esta julgando e na origem das causas dos erros que ele comete, bom notei visualizando o gráfico que está errando muito as críticas sobre uma música popular, já que temos uma diferença de apenas 100 casos entre os verdadeiro positivo e os falsos negativos.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "cm = confusion_matrix(y_test, y_pred)\n",
+        "\n",
+        "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues',\n",
+        "            xticklabels=np.unique(y_test), yticklabels=np.unique(y_test))\n",
+        "\n",
+        "plt.title('Matriz de Confusão')\n",
+        "plt.xlabel('Rótulos Previstos')\n",
+        "plt.ylabel('Rótulos Verdadeiros')\n",
+        "plt.show()"
       ]
     }
   ],
